manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world-nextjs
  labels:
    app: hello-world-nextjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-nextjs
  template:
    metadata:
      labels:
        app: hello-world-nextjs
        deploymentconfig: hello-world-nextjs
    spec:
      containers:
        - name: hello-world-nextjs
          image: >-
            quay.io/tonykhbo0/hello-world-nextjs@sha256:0f63e7bd343dcf11b2cb29a2b65004179db0162edfeea3ebfeaec1435e160e0d
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
